[package]
name = "vihar_tls"
version = "0.1.0"
edition = "2024"

[lib]
name = "vihar_tls"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "examples/server.rs"

[[bin]]
name = "client"
path = "examples/client.rs"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
dsa = "0.6.3"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
num-bigint = { version="0.4.6", features = ["rand"] }
num-traits = "0.2.19"
paste = "1.0.15"
pem = "3.0.5"
rand = "0.8"
rsa = { version = "0.9.8", features = ["sha1", "sha2"] }
sha1 = "0.10.5"
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.12"
webpki-root-certs = "1.0.2"
x509-parser = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.3.0"
