[package]
name = "rtls"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
dsa = "0.6.3"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
log = "0.4.27"
num-bigint = { version="0.4.6", features = ["rand"] }
num-traits = "0.2.19"
num_enum = "0.7.4"
rand = "0.8"
rand_chacha = "0.3.1"
rsa = { version = "0.9.8", features = ["sha2"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.12"
x509-parser = "0.17.0"
